--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -226,9 +226,9 @@ import Layout from '../layouts/Layout.astro';
               <div class="mt-6">
                 <h4 class="font-semibold mb-3">Follow Me</h4>
                 <div class="flex space-x-4">
-                  <a href="https://linkedin.com/in/iftikhar-khan" class="text-blue-600 hover:text-blue-800 transition">LinkedIn</a>
+                  <a href="https://www.linkedin.com/in/ikhan-connect" class="text-blue-600 hover:text-blue-800 transition">LinkedIn</a>
                   <a href="https://github.com/ikhan2010" class="text-gray-800 hover:text-gray-600 transition">GitHub</a>
-                  <a href="https://twitter.com/ikhan2010" class="text-blue-400 hover:text-blue-600 transition">Twitter</a>
+                  <a href="https://x.com/ifty_k" class="text-blue-400 hover:text-blue-600 transition">Twitter</a>
                 </div>
               </div>
             </div>
